<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>deepracer_launcher</name>
  <version>0.0.1</version>

  <description>
    This package contains main launcher file to launch the nodes required
    to provide the AWS DeepRacer core functionalities.
  </description>

  <maintainer email="aws-deepracer@amazon.com">AWS DeepRacer</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>camera_pkg</depend>
  <depend>ctrl_pkg</depend>
  <depend>deepracer_navigation_pkg</depend>
  <depend>deepracer_systems_pkg</depend>
  <depend>device_info_pkg</depend>
  <depend>i2c_pkg</depend>
  <depend>inference_pkg</depend>
  <depend>model_optimizer_pkg</depend>
  <depend>rplidar_ros</depend>
  <depend>sensor_fusion_pkg</depend>
  <depend>servo_pkg</depend>
  <depend>status_led_pkg</depend>
  <depend>usb_monitor_pkg</depend>
  <depend>webserver_pkg</depend>
  <depend>web_video_server</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>